--- a/app/src/main/res/drawable-mdpi/edt_bg.xml
+++ b/app/src/main/res/drawable-mdpi/edt_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@null"/>
-    <stroke android:color="@color/black"
+    <stroke android:color="@color/gray_text_light"
         android:width="@dimen/dim_2"/>
 
 </shape>
