--- a/app/src/main/res/drawable-xhdpi/selected_bg.xml
+++ b/app/src/main/res/drawable-xhdpi/selected_bg.xml
@@ -2,7 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/colorPrimaryDark"/>
-    <stroke android:color="@color/black"
-        android:width="@dimen/dim_2"/>
+    <stroke android:color="@null" />
 
 </shape>
