--- a/app/src/main/res/drawable-mdpi/edt_bg.xml
+++ b/app/src/main/res/drawable-mdpi/edt_bg.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@null"/>
-    <stroke android:color="@color/gray_text_light"
-        android:width="@dimen/dim_2"/>
+    <solid android:color="@null" />
+    <stroke
+        android:width="1px"
+        android:color="@color/gray_text_light" />
 
 </shape>
