commit dheeraj second 05-02-2018

--- a/app/src/main/res/layout/activity_schedule_meal.xml
+++ b/app/src/main/res/layout/activity_schedule_meal.xml
@@ -134,6 +134,8 @@
                         app:activeThumbFocusRadius="2dp"
                         app:activeThumbRadius="7dp"
                         app:count="9"
+                        app:start="0"
+                        app:end="1"
                         app:fixedLineThickness="3dp"
                         app:innerRangePadding="3dp"
                         app:labelFontSize="10sp"
@@ -383,6 +385,8 @@
                         app:activeThumbFocusRadius="2dp"
                         app:activeThumbRadius="7dp"
                         app:count="9"
+                        app:start="0"
+                        app:end="1"
                         app:fixedLineThickness="3dp"
                         app:innerRangePadding="3dp"
                         app:labelFontSize="10sp"
@@ -632,8 +636,12 @@
                         android:layout_margin="@dimen/dim_10"
                         app:activeLineThickness="3dp"
                         app:activeThumbFocusRadius="2dp"
+                        app:start="0"
+                        app:end="1"
                         app:activeThumbRadius="7dp"
                         app:count="9"
+
+
                         app:fixedLineThickness="3dp"
                         app:innerRangePadding="3dp"
                         app:labelFontSize="10sp"
