--- a/app/src/main/res/layout/activity_schedule_meal.xml
+++ b/app/src/main/res/layout/activity_schedule_meal.xml
@@ -168,6 +168,7 @@
                         android:layout_margin="@dimen/dim_5"
                         android:fontFamily="@font/pt_regular"
                         android:gravity="center"
+                        android:text="Sun,Mon,Tue,Wed,Thu,Fri,Sat"
                         android:textColor="@color/gray_tab"
                         android:textSize="@dimen/dim_14" />
 
@@ -418,6 +419,7 @@
                         android:layout_marginTop="@dimen/dim_5"
                         android:fontFamily="@font/pt_regular"
                         android:gravity="center"
+                        android:text="Sun,Mon,Tue,Wed,Thu,Fri,Sat"
                         android:textColor="@color/gray_tab"
                         android:textSize="@dimen/dim_15" />
 
@@ -673,6 +675,7 @@
                         android:layout_margin="@dimen/dim_5"
                         android:fontFamily="@font/pt_regular"
                         android:gravity="center"
+                        android:text="Sun,Mon,Tue,Wed,Thu,Fri,Sat"
                         android:textColor="@color/gray_tab"
                         android:textSize="@dimen/dim_14" />
 
