--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -111,6 +111,40 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/lrn_organisation"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:padding="@dimen/dim_10">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:background="@null"
+                        android:src="@drawable/ic_organisation" />
+
+                    <com.localfriend.fonts.CustomFontPtSansText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:text="Organisation"
+                        android:textColor="@color/gray_text"
+                        android:textSize="12sp"
+                        app:textStyle="@integer/roboto_medium" />
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-5dp">
+
+                <LinearLayout
                     android:id="@+id/lrn_vegetable"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -135,14 +169,6 @@
                         android:textSize="12sp"
                         app:textStyle="@integer/roboto_medium" />
                 </LinearLayout>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_marginTop="-5dp"
-                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:id="@+id/lrn_fruit"
@@ -206,7 +232,8 @@
                     android:layout_centerVertical="true"
                     android:layout_weight="1"
                     android:orientation="vertical"
-                    android:padding="@dimen/dim_10">
+                    android:padding="@dimen/dim_10"
+                    android:visibility="gone">
 
                     <ImageView
                         android:layout_width="wrap_content"
