--- a/app/src/main/res/layout/dialog_subscription_details.xml
+++ b/app/src/main/res/layout/dialog_subscription_details.xml
@@ -20,7 +20,6 @@
         android:orientation="vertical">
 
 
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -36,30 +35,30 @@
                 android:padding="5dp"
                 android:text="Package Type"
                 android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
-                android:textSize="16sp"/>
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/txt_pkgCost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:text="Price"
                 android:fontFamily="@font/pt_regular"
                 android:padding="5dp"
+                android:text="Price"
                 android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
-                android:textSize="16sp"/>
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/txt_startDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/txt_packageType"
-                android:text="25/04/2018"
                 android:fontFamily="@font/pt_regular"
                 android:padding="5dp"
-                android:textSize="14sp"/>
+                android:text="25/04/2018"
+                android:textSize="14sp" />
 
 
         </RelativeLayout>
@@ -67,7 +66,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:alpha=".5"
             android:background="@color/black"></View>
 
@@ -79,126 +78,142 @@
             <TableRow
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp">
+
                 <TextView
                     android:layout_column="1"
-                    android:layout_weight="1.5"/>
+                    android:layout_weight="1.5" />
+
                 <TextView
                     android:layout_column="2"
                     android:layout_weight="1"
                     android:text="B"
+                    android:textAlignment="center"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:textAlignment="center"/>
+                    android:textStyle="bold" />
+
                 <TextView
                     android:layout_column="3"
                     android:layout_weight="1"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
+                    android:text="L"
                     android:textAlignment="center"
-                    android:text="L"/>
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:layout_column="4"
                     android:layout_weight="1"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
+                    android:text="D"
                     android:textAlignment="center"
-                    android:text="D"/>
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
             </TableRow>
 
             <TableRow>
+
                 <TextView
                     android:layout_column="1"
-                    android:text="Received"
+                    android:layout_weight="1.5"
                     android:gravity="center"
-                    android:padding="8dp"
-                    android:textSize="16sp"
+                    android:padding="5dp"
+                    android:text="Received"
                     android:textColor="@color/green_bg"
-                    android:layout_weight="1.5"/>
+                    android:textSize="16sp" />
+
                 <TextView
                     android:id="@+id/received_bf"
                     android:layout_column="2"
                     android:layout_weight="1"
                     android:text="B"
-                    android:textSize="18sp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
+
                 <TextView
                     android:id="@+id/received_lunch"
                     android:layout_column="3"
                     android:layout_weight="1"
-                    android:textSize="18sp"
+                    android:text="L"
                     android:textAlignment="center"
-                    android:text="L"/>
+                    android:textSize="18sp" />
+
                 <TextView
                     android:id="@+id/received_dinner"
                     android:layout_column="4"
                     android:layout_weight="1"
-                    android:textSize="18sp"
+                    android:text="D"
                     android:textAlignment="center"
-                    android:text="D"/>
+                    android:textSize="18sp" />
             </TableRow>
 
             <TableRow>
+
                 <TextView
                     android:layout_column="1"
-                    android:text="Cancelled"
+                    android:layout_weight="1.5"
                     android:gravity="center"
-                    android:padding="8dp"
-                    android:textSize="16sp"
+                    android:padding="5dp"
+                    android:text="Cancelled"
                     android:textColor="@color/red"
-                    android:layout_weight="1.5"/>
+                    android:textSize="16sp" />
+
                 <TextView
                     android:id="@+id/cancelled_bf"
                     android:layout_column="2"
                     android:layout_weight="1"
                     android:text="B"
-                    android:textSize="18sp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
+
                 <TextView
                     android:id="@+id/cancelled_lunch"
                     android:layout_column="3"
                     android:layout_weight="1"
-                    android:textSize="18sp"
+                    android:text="L"
                     android:textAlignment="center"
-                    android:text="L"/>
+                    android:textSize="18sp" />
+
                 <TextView
                     android:id="@+id/cancelled_dinner"
                     android:layout_column="4"
                     android:layout_weight="1"
-                    android:textSize="18sp"
+                    android:text="D"
                     android:textAlignment="center"
-                    android:text="D"/>
+                    android:textSize="18sp" />
             </TableRow>
 
             <TableRow>
+
                 <TextView
                     android:layout_column="1"
-                    android:text="Remaining"
+                    android:layout_weight="1.5"
                     android:gravity="center"
-                    android:padding="8dp"
-                    android:textSize="16sp"
+                    android:padding="5dp"
+                    android:text="Remaining"
                     android:textColor="@color/black"
-                    android:layout_weight="1.5"/>
+                    android:textSize="16sp" />
+
                 <TextView
                     android:id="@+id/remaining_bf"
                     android:layout_column="2"
                     android:layout_weight="1"
                     android:text="B"
-                    android:textSize="18sp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
+
                 <TextView
                     android:id="@+id/remaining_lunch"
                     android:layout_column="3"
                     android:layout_weight="1"
-                    android:textSize="18sp"
+                    android:text="L"
                     android:textAlignment="center"
-                    android:text="L"/>
+                    android:textSize="18sp" />
+
                 <TextView
                     android:id="@+id/remaining_dinner"
                     android:layout_column="4"
                     android:layout_weight="1"
-                    android:textSize="18sp"
+                    android:text="D"
                     android:textAlignment="center"
-                    android:text="D"/>
+                    android:textSize="18sp" />
             </TableRow>
         </TableLayout>
 
@@ -213,41 +228,45 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <TableRow
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_column="1"
-                android:layout_weight="2.5"/>
-            <TextView
-                android:layout_column="2"
-                android:layout_weight="1"
-                android:text="Breakfast"
-                android:layout_width="0dp"
-                android:textSize="16sp"
-                android:textAlignment="center"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_column="3"
-                android:layout_weight="1"
-                android:textSize="16sp"
-                android:textAlignment="center"
-                android:text="Lunch"/>
-            <TextView
-                android:layout_column="4"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:textSize="16sp"
-                android:textAlignment="center"
-                android:text="Dinner"/>
-        </TableRow>
+            <TableRow
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_column="1"
+                    android:layout_weight="2" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_column="2"
+                    android:layout_weight="1"
+                    android:text="Breakfast"
+                    android:textAlignment="center"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_column="3"
+                    android:layout_weight="1"
+                    android:text="Lunch"
+                    android:textAlignment="center"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_column="4"
+                    android:layout_weight="1"
+                    android:text="Dinner"
+                    android:textAlignment="center"
+                    android:textSize="16sp" />
+            </TableRow>
         </TableLayout>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_subscription"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content" />
 
 
     </LinearLayout>
