--- a/app/src/main/res/layout/item_rv_subscription.xml
+++ b/app/src/main/res/layout/item_rv_subscription.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TableRow
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/detail_name"
-            android:layout_column="1"
-            android:layout_weight="1.5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:gravity="center"
             android:padding="8dp"
             android:text=""
@@ -20,27 +21,33 @@
 
         <ImageView
             android:id="@+id/brkfast_chk"
-            android:layout_column="2"
-            android:layout_weight="1"
-            android:text=""
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_weight="1"
+            android:src="@drawable/check_selector"
+            android:text=""
             android:textSize="18sp" />
 
         <ImageView
             android:id="@+id/lunch_chk"
-            android:layout_column="3"
-            android:layout_weight="1"
-            android:text=""
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_weight="1"
+            android:src="@drawable/check_selector"
+            android:text=""
             android:textSize="18sp" />
 
         <ImageView
             android:id="@+id/dinner_chk"
-            android:layout_column="4"
-            android:layout_weight="1"
-            android:text=""
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_weight="1"
+            android:src="@drawable/check_selector"
+            android:text=""
             android:textSize="18sp" />
-    </TableRow>
+    </LinearLayout>
 
-</TableLayout>
+</RelativeLayout>
