--- a/app/src/main/res/layout/dialog_subscription_details.xml
+++ b/app/src/main/res/layout/dialog_subscription_details.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="#f4f4f9">
 
     <ImageView
         android:id="@+id/img_close"
@@ -14,13 +14,29 @@
         android:src="@drawable/close" />
 
     <LinearLayout
+        android:id="@+id/ll1"
+        android:layout_below="@id/img_close"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:elevation="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/img_close"
-        android:orientation="vertical">
+        android:layout_below="@+id/img_close">
 
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <RelativeLayout
+            android:id="@+id/rl1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -62,16 +78,17 @@
 
 
         </RelativeLayout>
-
-        <View
+            <View
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:alpha=".5"
             android:background="@color/black"></View>
 
 
+
         <TableLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -180,7 +197,8 @@
                     android:textSize="18sp" />
             </TableRow>
 
-            <TableRow>
+            <TableRow
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_column="1"
@@ -216,15 +234,35 @@
                     android:textSize="18sp" />
             </TableRow>
         </TableLayout>
+        </LinearLayout>
 
-        <View
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+        <!--<View
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:layout_marginTop="20dp"
             android:alpha=".5"
-            android:background="@color/black"></View>
+            android:background="@color/black"></View>-->
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ll1"
+        android:elevation="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="30dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
         <TableLayout
+            android:id="@+id/table2"
+            android:paddingTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -263,13 +301,19 @@
             </TableRow>
         </TableLayout>
 
+
+
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_subscription"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            />
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 
-    </LinearLayout>
 
 
 </RelativeLayout>
