--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -32,6 +32,14 @@
         <item name="colorControlNormal">@color/white</item>
     </style>
 
+    <style name="MyCheckbox" parent="Base.Theme.AppCompat">
+        <item name="android:colorControlNormal">@color/gray_tab</item>
+        <item name="android:colorControlActivated">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/gray_tab</item>
+
+        <item name="android:textColorSecondary">@color/gray_tab</item>
+        <item name="android:colorControlHighlight">@color/colorPrimaryDark</item>
+    </style>
 
     <style name="expandedappbar" parent="@android:style/TextAppearance.Medium">
         <item name="android:textSize">22sp</item>
